apps/base/immich/07-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http-redirect
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: argocd
      sectionName: http
  hostnames:
    - immich.homelab.lan
    - immich.paulojauregui.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: argocd
      sectionName: https-public
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: argocd
      sectionName: https-local
  hostnames:
    - immich.homelab.lan
    - immich.paulojauregui.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
